added desc to devlog, fixed renaming

--- a/src/pages/devlog/11-2-2024-god-rays-concept-art-the-journal/index.mdx
+++ b/src/pages/devlog/11-2-2024-god-rays-concept-art-the-journal/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: God rays, concept art, the journal
-description:
+description: Culte du Poisson's first official devlog, going over sneak peaks of development progress among designers, concept artists, 3D modellers, and programmers!
 date: 11 February 2024
 published: true
 author: Kenzie MacDougal
@@ -19,7 +19,7 @@ export const imageCaption = imageAlt
 
 Compiled by Kenzie MacDougal
 
-Welcome to Cult de Poisson's first official devlog! Through these, we hope to share sneak peeks of various features we've been working on, and let you in on our process.
+Welcome to Culte du Poisson's first official devlog! Through these, we hope to share sneak peeks of various features we've been working on, and let you in on our process.
 
 ## GOD RAYS & BIOLUMINESCENCE
 Developed by one of our programmers, Harry, “god rays” and bioluminescence were implemented with the intention of giving our oceans a sense of wonder. They are implemented via Unity's particle system, which can be modified to give the glow directionality. Bioluminescent particles were implemented using both Shader Graph and the particle system.
