fixed readme cult-de-poisson -> culte-du-poisson, fixed typo in devlog

--- a/src/pages/devlog/11-2-2024-god-rays-concept-art-the-journal/index.mdx
+++ b/src/pages/devlog/11-2-2024-god-rays-concept-art-the-journal/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: God rays, concept art, the journal
-description: Culte du Poisson's first official devlog, going over sneak peaks of development progress among designers, concept artists, 3D modellers, and programmers!
+description: Culte du Poisson's first official devlog, going over sneak peeks of development progress among designers, concept artists, 3D modellers, and programmers!
 date: 11 February 2024
 published: true
 author: Kenzie MacDougal
